--- a/app/src/main/res/layout/activity_sync_data_list.xml
+++ b/app/src/main/res/layout/activity_sync_data_list.xml
@@ -1,23 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ViewListUser">
+    tools:context=".ui.SyncDataList">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvListUser"
+        android:id="@+id/rvSyncDataList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <Button
-        android:id="@+id/btnSync"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="sync data"
-        android:textAllCaps="false" />
-
 
 </RelativeLayout>
